	PR tree-optimization/26643 	* tree-ssa-loop-ivopts.c (find_interesting_uses_address): Do not handle 	bit_field_refs.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@112483 138bc75d-0d04-0410-961f-82ee72b054a4